[package]
name = "ws-demo"
version = "0.1.0"
authors = ["antholeole <antholeinik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.5.1" 
actix-web-actors="4.3.0"
actix = "0.13.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
